--- a/controller/my_robot_control.yaml
+++ b/controller/my_robot_control.yaml
@@ -11,4 +11,17 @@ MYROBOT:
     pid: {p: 100.0, i: 0.01, d: 10.0}
 
  
+  joint2_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: link01_link_02
+    pid: {p: 100.0, i: 0.01, d: 10.0}
 
+  joint3_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: link02_link_03
+    pid: {p: 100.0, i: 0.01, d: 10.0}
+
+  joint4_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: link03_link_04
+    pid: {p: 100.0, i: 0.01, d: 10.0}
